--- a/content/pan/angler.html
+++ b/content/pan/angler.html
@@ -1,5 +1,6 @@
 <style>
   #angler {
+    position: relative;
 
     font-size: 72px;
     background-color: #66e5cc;
@@ -23,6 +24,7 @@
 
 <link rel='stylesheet' href='type/css/PanAngler.css'/>
 <div class='PanAngler noLowercase' id='angler'>
+  <p style="background-color: #66e5cc" class='instruction'>mouse over</p>
 
 <p contenteditable="false" class="lineView var">
   <span class="A">A</span><span class="N">N</span><span class="G">G</span><span class="L">L</span><span class="E">E</span><span class="R">R</span>
