--- a/type/fonts.html
+++ b/type/fonts.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/Pan-FarhillDouble01.css" />
 <link rel="stylesheet" href="css/panv2020.css" />
+<link rel="stylesheet" href="css/Pan_demo.css" />
 <link rel="stylesheet" href="css/Marty-Duo_colr.css" />
 <link rel="stylesheet" href="css/Sketch-Fine.css" />
 <link rel="stylesheet" href="css/Mier-Bol.css" />
@@ -58,7 +59,11 @@
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-panv2020'><input type='range' class='ax' min='2.0' max='70.0' value='2.0' name='panv2020wght' id='panv2020wght'><label for='panv2020wght'>Weight</label><br><input type='range' class='ax' min='0.0' max='312.0' value='0.0' name='panv2020ANGL' id='panv2020ANGL'><label for='panv2020ANGL'>Angle</label><br><input type='range' class='ax' min='30.0' max='50.0' value='40.0' name='panv2020STEP' id='panv2020STEP'><label for='panv2020STEP'>Steps</label><br><input type='range' class='ax' min='0.0' max='2.0' value='0.0' name='panv2020SHAP' id='panv2020SHAP'><label for='panv2020SHAP'>Shapes</label><br></div></div><div class='fontItem lineView Marty-Duo_colr noLowercase'>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-panv2020'><input type='range' class='ax' min='2.0' max='70.0' value='2.0' name='panv2020wght' id='panv2020wght'><label for='panv2020wght'>Weight</label><br><input type='range' class='ax' min='0.0' max='312.0' value='0.0' name='panv2020ANGL' id='panv2020ANGL'><label for='panv2020ANGL'>Angle</label><br><input type='range' class='ax' min='30.0' max='50.0' value='40.0' name='panv2020STEP' id='panv2020STEP'><label for='panv2020STEP'>Steps</label><br><input type='range' class='ax' min='0.0' max='2.0' value='0.0' name='panv2020SHAP' id='panv2020SHAP'><label for='panv2020SHAP'>Shapes</label><br></div></div><div class='fontItem lineView Pan_demo noLowercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-Pan_demo'><input type='range' class='ax' min='2.0' max='60.0' value='2.0' name='Pan_demowght' id='Pan_demowght'><label for='Pan_demowght'>Weight</label><br><input type='range' class='ax' min='30.0' max='50.0' value='40.0' name='Pan_demoSTEP' id='Pan_demoSTEP'><label for='Pan_demoSTEP'>Steps</label><br><input type='range' class='ax' min='0.0' max='330.0' value='0.0' name='Pan_demoANGL' id='Pan_demoANGL'><label for='Pan_demoANGL'>Angle</label><br><input type='range' class='ax' min='0.0' max='4.0' value='0.0' name='Pan_demoSHAP' id='Pan_demoSHAP'><label for='Pan_demoSHAP'>Shape</label><br><input type='range' class='ax' min='0.0' max='1.0' value='0.0' name='Pan_demoINNR' id='Pan_demoINNR'><label for='Pan_demoINNR'>Inner</label><br><input type='range' class='ax' min='-60.0' max='60.0' value='-60.0' name='Pan_demoPOIN' id='Pan_demoPOIN'><label for='Pan_demoPOIN'>Point</label><br></div></div><div class='fontItem lineView Marty-Duo_colr noLowercase'>
 <p contenteditable="true" class="lineView">gunslinger and other songs</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
@@ -114,7 +119,7 @@
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-Pan_Clock'><input type='range' class='ax' min='2.0' max='100.0' value='2.0' name='Pan_Clockwght' id='Pan_Clockwght'><label for='Pan_Clockwght'>Weight</label><br><input type='range' class='ax' min='0.0' max='354.0' value='0.0' name='Pan_ClockANGL' id='Pan_ClockANGL'><label for='Pan_ClockANGL'>Angle</label><br><input type='range' class='ax' min='30.0' max='40.0' value='35.0' name='Pan_ClockSTEP' id='Pan_ClockSTEP'><label for='Pan_ClockSTEP'>Steps</label><br></div></div><div class='fontItem lineView trees'>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-Pan_Clock'><input type='range' class='ax' min='0.0' max='350.0' value='0.0' name='Pan_ClockANGL' id='Pan_ClockANGL'><label for='Pan_ClockANGL'>Angle</label><br></div></div><div class='fontItem lineView trees'>
 <p contenteditable="true" class="lineView">HORTUS BOTANICUS</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
