--- a/type/varUnits/Pan_demo.html
+++ b/type/varUnits/Pan_demo.html
@@ -1,7 +1,7 @@
 <link rel='stylesheet' href='type/css/Pan_demo.css'/>
 <div class='Pan_demo noLowercase' id='varUnit'>
 
-<p style="font-size: 144px;" contenteditable="true" class="lineView">PAN DEMO</p>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 <div class='varSup' style='text-transform: capitalize;' id='sliders-Pan_demo'><input type='range' class='ax' min='2.0' max='60.0' value='2.0' name='Pan_demowght' id='Pan_demowght'><label for='Pan_demowght'>Weight</label><br><input type='range' class='ax' min='30.0' max='50.0' value='40.0' name='Pan_demoSTEP' id='Pan_demoSTEP'><label for='Pan_demoSTEP'>Steps</label><br><input type='range' class='ax' min='0.0' max='330.0' value='0.0' name='Pan_demoANGL' id='Pan_demoANGL'><label for='Pan_demoANGL'>Angle</label><br><input type='range' class='ax' min='0.0' max='4.0' value='0.0' name='Pan_demoSHAP' id='Pan_demoSHAP'><label for='Pan_demoSHAP'>Shape</label><br><input type='range' class='ax' min='0.0' max='1.0' value='0.0' name='Pan_demoINNR' id='Pan_demoINNR'><label for='Pan_demoINNR'>Inner</label><br><input type='range' class='ax' min='-60.0' max='60.0' value='-60.0' name='Pan_demoPOIN' id='Pan_demoPOIN'><label for='Pan_demoPOIN'>Point</label><br></div>
 <script>
 const Pan_demoSliders = document.querySelector("#sliders-Pan_demo");
