--- a/piksels.html
+++ b/piksels.html
@@ -129,7 +129,7 @@ In this example I have 7 alphabets, these are accessible via FeatureVariations. 
 <img src="content/piksels/fontOverview.png" />
 <p class="description" >
 I made a tutorial how to make your own variable pixel font. <br>
-I povide a script that makes the designspace document and an example ufo. I like to use fontmake so that is in this workflow too. You can find all these resource on my GitHub account: <a href="https://github.com/hallotype/Piksels">https://github.com/hallotype/Piksels</a>. <br>
+I provide a script that makes the designspace document and an example ufo. I like to use fontmake so that is in this workflow too. You can find all these resource on my GitHub account: <a href="https://github.com/hallotype/Piksels">https://github.com/hallotype/Piksels</a>. <br>
 If you have any questions, please contact me by mail, twitter, ...
 </p><img src='content/piksels/MARIO.png'/>
 
