--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
 <div class="clear"></div>
 <div class="project">
   <div class="cover">
+    <a href="accents.html">
+      <img src="content/accents/cover.png" />
+    </a>
+  </div>
+
+  <div class="title">
+    <a href="accents.html">accents</a>
+  </div>
+  <div class="tags"><ol><li>workflow</li><li>ufo</li><li>robofont</li><li>scripting</li></ol></div>
+</div>
+<div class="clear"></div>
+<div class="project">
+  <div class="cover">
     <a href="nesfonts.html">
       <img src="content/NESFont/cover.png" />
     </a>
@@ -97,6 +110,19 @@
     <a href="nesfonts.html">NES Fonts</a>
   </div>
   <div class="tags"><ol><li>type</li><li>8bit</li><li>pixels</li><li>>>>DRAFT<<<</li><li></li></ol></div>
+</div>
+<div class="clear"></div>
+<div class="project">
+  <div class="cover">
+    <a href="quake.html">
+      <img src="content/quake/cover.gif" />
+    </a>
+  </div>
+
+  <div class="title">
+    <a href="quake.html">quake</a>
+  </div>
+  <div class="tags"><ol><li>binary data</li><li></li></ol></div>
 </div>
 <div class="clear"></div>
 
