--- a/accents.html
+++ b/accents.html
@@ -69,14 +69,10 @@ It uses <a href='https://github.com/typemytype/GlyphConstruction'> GlyphConstruc
 <img src='content/accents/DrawingObserver.png'/>
 <img src='content/accents/Editor.png'/>
 <img src='content/accents/MissingAnchor.png'/>
-<p>
-  TODO:
-  - screencast easy edit
-  - place anchors
-  - reload observer
-  - 
-
-</p>
+TODO:
+<ul>
+  <li> screencast in action </li>
+</ul>
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
   </body>
