--- a/accents.html
+++ b/accents.html
@@ -66,7 +66,11 @@ It uses <a href='https://github.com/typemytype/GlyphConstruction'> GlyphConstruc
     <li>No need to worry about cap-variants in the Constructions. If the anchor if above a threshold the library is automatically searching for a cap-variant in the font and uses that if found </li>
     <li>The Observer warns you if anchors are missing and can place them roughly in the correct area</li>
   </ul>
-<img src='content/accents/DrawingObserver.png'/>
+  <p class="description">
+    Here is a screencast, see it in action:
+  </p>
+  <iframe width="900" height="507" src="https://www.youtube.com/embed/76PRxcQHViI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <img src='content/accents/DrawingObserver.png'/>
 <img src='content/accents/Editor.png'/>
 <img src='content/accents/MissingAnchor.png'/>
 TODO:
