add github link

--- a/accents.html
+++ b/accents.html
@@ -70,6 +70,10 @@ It uses <a href='https://github.com/typemytype/GlyphConstruction'> GlyphConstruc
     Here is a screencast, see it in action:
   </p>
   <iframe width="900" height="507" src="https://www.youtube.com/embed/76PRxcQHViI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <p class="description">
+  <a href="https://github.com/hallotype/DiacriticsWorkflow"><b>→ → </b>Ğëț îŧ ỳǫůŗşėľf, főř fŕęẽ!<b> ← ←</b></a> ;)
+  </p>
+
   <img src='content/accents/DrawingObserver.png'/>
 <img src='content/accents/Editor.png'/>
 <img src='content/accents/MissingAnchor.png'/>
