--- a/pan.html
+++ b/pan.html
@@ -93,11 +93,14 @@ Since the drawings are not compatible, featureSubstitutions are needed. Currentl
 <link rel="stylesheet" href="type/css/Pan_Clock.css" />
 <style>
   #varUnit.w {
-    background-color: #ffc600;
+    background-color: hsl(47, 100%, 50%);
     padding-bottom: 36px;
+    height: 300px;
 
   }
   .Pan_Clock p {
+    padding-top: 124px;
+
     font-size: 266px;
   }
 
