--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
     <div id="main">
       <div class="project">
   <div class="cover">
+    <a href="somegreatname.html">
+      <img src="content/somegreatname/cover.png" />
+    </a>
+  </div>
+
+  <div class="title">
+    <a href="somegreatname.html">Some Great Name</a>
+  </div>
+  <div class="tags"><ol><li>type</li><li>variable</li><li>text face</li></ol></div>
+</div>
+<div class="clear"></div>
+<div class="project">
+  <div class="cover">
     <a href="piksels.html">
       <img src="content/piksels/cover.gif" />
     </a>
