--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
 <div class="clear"></div>
 <div class="project">
   <div class="cover">
+    <a href="smarttype.html">
+      <img src="content/smartType/cover.png" />
+    </a>
+  </div>
+
+  <div class="title">
+    <a href="smarttype.html">smart type</a>
+  </div>
+  <div class="tags"><ol><li>features </li><li>engineering</li></ol></div>
+</div>
+<div class="clear"></div>
+<div class="project">
+  <div class="cover">
     <a href="piksels.html">
       <img src="content/piksels/cover.gif" />
     </a>
