add footer, consistent titles

--- a/golf.html
+++ b/golf.html
@@ -297,7 +297,14 @@ I wrote a tool to create this font out of a normal font. To declare the extreme 
   </script>
 </div>
 
-      <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
+    <div id="bottomline">&nbsp;</div>
+    <div id="footer">&nbsp;
+  <p class="left">
+    <a href="http://www.twitter.com/thomhendrik">Twitter</a><br>
+    <a href="http://www.instagram.com/thomhendrik">Instagram</a><br>
+    Mail: <span id='preat'>thom</span>hallotype.nl<br>
+  </p>
+</div>
   </body>
 </html>
