--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </div>
 
   <div class="title">
-    <a href="smarttype.html">smart type</a>
+    <a href="smarttype.html">Smart Type</a>
   </div>
   <div class="tags"><ol><li>features </li><li>engineering</li></ol></div>
 </div>
@@ -120,7 +120,7 @@
   </div>
 
   <div class="title">
-    <a href="accents.html">accents</a>
+    <a href="accents.html">Accents</a>
   </div>
   <div class="tags"><ol><li>workflow</li><li>ufo</li><li>robofont</li><li>scripting</li></ol></div>
 </div>
@@ -146,13 +146,21 @@
   </div>
 
   <div class="title">
-    <a href="quake.html">quake</a>
+    <a href="quake.html">Quake</a>
   </div>
   <div class="tags"><ol><li>binary data</li><li></li></ol></div>
 </div>
 <div class="clear"></div>
 
-      <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
+    <div id="bottomline">&nbsp;</div>
+    <div id="footer">&nbsp;
+  <p class="left">
+    <a href="http://www.twitter.com/thomhendrik">Twitter</a><br>
+    <a href="http://www.instagram.com/thomhendrik">Instagram</a><br>
+    Mail: <span id='preat'>thom</span>hallotype.nl<br>
+  </p>
+</div>
+
   </body>
 </html>
