--- a/nesfonts.html
+++ b/nesfonts.html
@@ -112,7 +112,14 @@
   scripts. <br /><br />Thanks, Thom
 </p>
 
-      <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
+    <div id="bottomline">&nbsp;</div>
+    <div id="footer">&nbsp;
+  <p class="left">
+    <a href="http://www.twitter.com/thomhendrik">Twitter</a><br>
+    <a href="http://www.instagram.com/thomhendrik">Instagram</a><br>
+    Mail: <span id='preat'>thom</span>hallotype.nl<br>
+  </p>
+</div>
   </body>
 </html>
