--- a/smarttype.html
+++ b/smarttype.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>smart type</title>
+    <title>Smart Type</title>
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -92,7 +92,14 @@ When the font is used, this table is read and the OpenType features are set. Now
   When the font used in a graphics app, the app should read the FSET and set the OT features accordingly. 
 </p> <img src='content/smartType/screenshotDB.png'/>
 
-      <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
+    <div id="bottomline">&nbsp;</div>
+    <div id="footer">&nbsp;
+  <p class="left">
+    <a href="http://www.twitter.com/thomhendrik">Twitter</a><br>
+    <a href="http://www.instagram.com/thomhendrik">Instagram</a><br>
+    Mail: <span id='preat'>thom</span>hallotype.nl<br>
+  </p>
+</div>
   </body>
 </html>
