--- a/templateProjectHtml.html
+++ b/templateProjectHtml.html
@@ -20,7 +20,8 @@
     {header}
     <div id="main">
       {project}
-      <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
+    <div id="bottomline">&nbsp;</div>
+    {footer}
   </body>
 </html>
