--- a/templateindex.html
+++ b/templateindex.html
@@ -24,7 +24,9 @@
     {header}
     <div id="main">
       {projects}
-      <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
+    <div id="bottomline">&nbsp;</div>
+    {footer}
+
   </body>
 </html>
