--- a/pan.html
+++ b/pan.html
@@ -354,7 +354,14 @@ function Pan_demoChanger(e) {
 +",'POIN' " + document.querySelector("#Pan_demoPOIN").value
   });}</script>
 </div>
-      <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
+    <div id="bottomline">&nbsp;</div>
+    <div id="footer">&nbsp;
+  <p class="left">
+    <a href="http://www.twitter.com/thomhendrik">Twitter</a><br>
+    <a href="http://www.instagram.com/thomhendrik">Instagram</a><br>
+    Mail: <span id='preat'>thom</span>hallotype.nl<br>
+  </p>
+</div>
   </body>
 </html>
