--- a/piksels.html
+++ b/piksels.html
@@ -133,7 +133,14 @@ I provide a script that makes the designspace document and an example ufo. I lik
 If you have any questions, please contact me by mail, twitter, ...
 </p><img src='content/piksels/MARIO.png'/>
 
-      <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
+    <div id="bottomline">&nbsp;</div>
+    <div id="footer">&nbsp;
+  <p class="left">
+    <a href="http://www.twitter.com/thomhendrik">Twitter</a><br>
+    <a href="http://www.instagram.com/thomhendrik">Instagram</a><br>
+    Mail: <span id='preat'>thom</span>hallotype.nl<br>
+  </p>
+</div>
   </body>
 </html>
