--- a/smart.html
+++ b/smart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Some Great Name</title>
+    <title>smart</title>
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -43,26 +43,10 @@
 </div> -->
 
     <div id="main">
-      <img src='content/somegreatname/cover.png'/>
-<p class="description">This is a typeface. In development.<br>
-<br>
-An original design with classical elements and textface proportions.
-<br>
-Up-to-date technology: variable axes for weight and small cap height.
+      <img src='content/smartType/cover.png'/>
+<p class="description">Something something something</p>
 
-</p>
-<img src='content/somegreatname/Verne.png'/>
-<img src='content/somegreatname/VSC.gif'/>
-<img src='content/somegreatname/lineup.png'/>
-
+      <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
-    <div id="bottomline">&nbsp;</div>
-    <div id="footer">&nbsp;
-  <p class="left">
-    <a href="http://www.twitter.com/thomhendrik">Twitter</a><br>
-    <a href="http://www.instagram.com/thomhendrik">Instagram</a><br>
-    Mail: <span id='preat'>thom</span>hallotype.nl<br>
-  </p>
-</div>
   </body>
 </html>
