--- a/footer.html
+++ b/footer.html
@@ -2,6 +2,6 @@
   <p class="left">
     <a href="http://www.twitter.com/thomhendrik">Twitter</a><br>
     <a href="http://www.instagram.com/thomhendrik">Instagram</a><br>
-    Mail: <span id='preat'>thom</span>hallotype.nl<br>
+    Mail: <span id='preat'>ohamburgefonstiv</span>gmail.com<br>
   </p>
 </div>
