--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <div class="title">
     <a href="nesfonts.html">NES Fonts</a>
   </div>
-  <div class="tags"><ol><li>type</li><li>8bit</li><li>pixels</li><li>>>>DRAFT<<<</li><li></li></ol></div>
+  <div class="tags"><ol><li>type</li><li>8bit</li><li>pixels</li><li></li><li></li></ol></div>
 </div>
 <div class="clear"></div>
 <div class="project">
@@ -158,7 +158,6 @@
   <p class="left">
     <a href="http://www.twitter.com/thomhendrik">Twitter</a><br>
     <a href="http://www.instagram.com/thomhendrik">Instagram</a><br>
-    Mail: <span id='preat'>thom</span>hallotype.nl<br>
   </p>
 </div>
 
