--- a/pan.html
+++ b/pan.html
@@ -93,14 +93,11 @@ Since the drawings are not compatible, featureSubstitutions are needed. Currentl
 <link rel="stylesheet" href="type/css/Pan_Clock.css" />
 <style>
   #varUnit.w {
-    background-color: hsl(47, 100%, 50%);
+    background-color: #ffc600;
     padding-bottom: 36px;
-    height: 300px;
 
   }
   .Pan_Clock p {
-    padding-top: 124px;
-
     font-size: 266px;
   }
 
@@ -360,7 +357,6 @@ function Pan_demoChanger(e) {
   <p class="left">
     <a href="http://www.twitter.com/thomhendrik">Twitter</a><br>
     <a href="http://www.instagram.com/thomhendrik">Instagram</a><br>
-    Mail: <span id='preat'>thom</span>hallotype.nl<br>
   </p>
 </div>
   </body>
